force-app/main/default/objects/AAR_Outreach__c/AAR_Outreach__c.object-meta.xml
<CustomObject>
    <label>Outreach and Media</label>
    <nameField>
        <displayFormat>OUT-{0000}</displayFormat>
        <label>Outreach Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach and Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>