force-app/main/default/objects/AAR_Outreach__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <label>Activity / Event Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>