force-app/main/default/objects/AAR_Outreach__c/fields/Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Count__c</fullName>
    <label>Number of Attendees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>