force-app/main/default/objects/AAR_Outreach__c/fields/Media_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Media_Outlet__c</fullName>
    <label>Media Outlet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>