force-app/main/default/objects/AAR_Outreach__c/fields/Outreach_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Type__c</fullName>
    <label>Outreach Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Public Outreach</fullName><default
        >false</default><label>Public Outreach</label></value>
            <value><fullName>Conference Attendance</fullName><default
        >false</default><label>Conference Attendance</label></value>
            <value><fullName>Meeting Abstract</fullName><default
        >false</default><label>Meeting Abstract</label></value>
            <value><fullName>Media Engagement</fullName><default
        >false</default><label>Media Engagement</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>